fix: align storybook global style import (#2508)

--- a/components/Pledge/Pledge.module.scss
+++ b/components/Pledge/Pledge.module.scss
@@ -1,9 +1,7 @@
 @use "../../styles/mixins" as *;
 
-@layer components {
-    .checklist {
-        @include checklist;
+.checklist {
+    @include checklist;
 
-        padding-block-start: var(--space-m);
-    }
+    padding-block-start: var(--space-m);
 }
